Feat: 完成 Phase 7-8 场景性能测试与硬件驱动扩展
- 新增 5 个场景测试文件 (HST/UMa/InH/RMa/Tunnel)
- 扩展 ChannelEmulator/IntegratedTester 驱动接口
- 根据手册复核更新 Vertex/PROPSIM 驱动 SCPI 指令
- 新增 CI/CD 配置 (GitHub Actions + pre-commit)
- 新增数据库、报告生成、历史记录等功能
- 59 个单元测试全部通过

Ref: RPI_CommandRef.pdf, Propsim ATE AN.pdf

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,11 @@ numpy
 pure-python-adb
 pyyaml
 pytest
+pytest-asyncio
+httpx
 fastapi
 uvicorn[standard]
-websocketspython-multipart
+websockets
+python-multipart
+jinja2
+weasyprint
