--- a/.ruff.toml
+++ b/.ruff.toml
@@ -2,9 +2,11 @@
 # 忽略的错误类型
 [lint]
 ignore = [
+    "E402",  # Module level import not at top of file - 某些导入需要在运行时
     "E501",  # Line too long - 允许合理的长行
     "E701",  # Multiple statements on one line (colon)
     "E702",  # Multiple statements on one line (semicolon)
+    "E722",  # Bare except - 有些地方需要捕获所有异常
     "F841",  # Local variable assigned but never used
 ]
 
