feat: 完成项目交付和依赖管理
## 新增交付文档包 (delivery/)
1. 01_详细设计文档.md (985行)
   - 系统架构和分层设计
   - 后端模块详解（函数/参数级别）
   - 前端组件完整说明
   - 数据库设计和 API 规范

2. 02_接口测试报告.md (654行)
   - 硬件驱动测试（5个驱动）
   - DUT 接口测试
   - 端到端场景验证（8个场景）
   - 真实测试日志和结论

3. 03_用户使用手册.md (791行)
   - 5分钟快速开始
   - 详细安装和配置
   - 界面操作指南
   - 场景编写教程
   - FAQ 和故障排除

## 依赖管理改进
- requirements.txt: 添加所有包的精确版本号
- 按功能分类（核心/开发/测试）
- 详细注释每个包的用途
- 版本策略说明

## 其他改进
- .gitignore: 忽略临时文件（__pycache__/.DS_Store/日志）
- 场景文件: 新增 demo.yaml
- 测试: 更新 test_api.py

文档总计: ~100页专业技术文档
作者: Simon
版本: v1.0

--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,31 @@
 # Python
 __pycache__/
 *.py[cod]
-*$py.class
 *.so
-.Python
-venv/
-.venv/
 *.egg-info/
 dist/
 build/
+*.log
+
+# macOS
+.DS_Store
+
+# Virtual Environment
+venv/
+env/
 
 # IDE
-.idea/
 .vscode/
-*.swp
-*.swo
+.idea/
 
-# OS
-.DS_Store
-Thumbs.db
+# Frontend
+frontend/node_modules/
+frontend/dist/
 
-# Project specific
-*.log
-backend/backend.log
-backend/test_results.db
+# Database
 *.db
+*.sqlite
 
-# Node
-node_modules/
-npm-debug.log
-
-# Coverage
+# Test
+.pytest_cache/
 .coverage
-htmlcov/
-coverage.xml
